# smart-wms

./: .gitignore  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml
.github/workflows/: aws.yml
ai-service/: Dockerfile  requirements.txt
ai-service/app/: main.py
ai-service/app/agents/: README.md
ai-service/app/agents/analytics/: agent.py  prompt.py
ai-service/app/agents/report/: agent.py  prompt.py
ai-service/app/agents/rules/: agent.py  prompt.py
ai-service/app/agents/supervisor/: prompt.py
ai-service/app/agents/text-to-sql-agent/: .env.example  AGENTS.md  README.md  agent.py  pyproject.toml
ai-service/app/agents/text-to-sql-agent/skills/query-writing/: SKILL.md
ai-service/app/agents/text-to-sql-agent/skills/schema-exploration/: SKILL.md
ai-service/app/core/: backend_client.py  config.py  deep_agent.py  memory.py  model.py  schemas.py  trace.py
ai-service/knowledge/: wms_rules.md
backend/: Dockerfile  pom.xml
clickhouse/init/: 001_realtime_order_q_10m_dw.sql  001_realtime_warehouse.sql
db/: init.sql
debezium/connectors/: order-status-postgres.json
flink/: Dockerfile  README.md  download-connectors.sh
flink-job/: pom.xml
flink/datastream/: OrderQ10mTimeoutJob.java
flink/sql/: realtime_warehouse_layers.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  api.js  style.css
mongodb/: init-mongo.js
pda-android/: README.md  local.properties  settings.gradle
pda-android/app/: build.gradle
postgres/init/: 001_replica_identity_full.sql
(+104 files in other folders)
